--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^8.0",
         "illuminate/support": "^8.0||^9.0||^10.0",
-        "laravel/legacy-factories": "^1.3"
+        "laravel/legacy-factories": "^1.3",
+        "stichoza/google-translate-php": "^4.1"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0|^8.0",
