--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^8.0",
         "illuminate/support": "^8.0||^9.0||^10.0",
         "laravel/legacy-factories": "^1.3",
-        "stichoza/google-translate-php": "^4.1"
+        "stichoza/google-translate-php": "*"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0|^8.0",
